삭제 재수정

--- a/werim_project/src/main/resources/templates/user/store/store-list.html
+++ b/werim_project/src/main/resources/templates/user/store/store-list.html
@@ -26,7 +26,7 @@
 			<img th:if="${store.logo_file == null}" width="100" height="100" th:src="@{/images/none.png}">
 			</a></td>
 			<td><a th:href="|/store/${store.store_pk}/menu/update|"><span th:text="${store.name}"></span></a></td>
-			<td><form method="post" th:action="@{|/store/${store.store_pk}/delete|}"><button class="btn btn-danger" >삭제</button>
+			<td><form method="post" th:action="@{|/store/delete/${store.store_pk}|}"><button class="btn btn-danger" >삭제</button>
 			</form>
 			</td>
 		</tr>
